@@ -4,6 +4,9 @@ endif
 ifeq ($(TARGETCXX),)
   TARGETCXX = $(TOOLSPREFIX)g++
 endif
+ifeq ($(TARGETAR),)
+  TARGETAR = $(TOOLSPREFIX)ar
+endif
 ifeq ($(TARGETRANLIB),)
   TARGETRANLIB = $(TOOLSPREFIX)ranlib
 endif
